--- a/app/src/main/res/layout/album_item_layout.xml
+++ b/app/src/main/res/layout/album_item_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:cardview="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:padding="2dp">
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cv"
         >
@@ -22,7 +22,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <com.etsy.android.grid.util.DynamicHeightImageView
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:scaleType="centerCrop"
@@ -32,31 +32,40 @@
                     android:layout_alignParentTop="true"
                     />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/name"
-                    android:layout_toRightOf="@+id/person_photo"
-                    android:layout_alignParentTop="true"
-                    android:textSize="30sp"
-                    android:text="TEST"
-                    />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:padding="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/description"
-                    android:layout_toRightOf="@+id/person_photo"
-                    android:layout_below="@+id/name"
-                    android:text="TEST"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/pictures"
-                    android:layout_below="@+id/description"
-                    android:text="TEST"
-                    />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/name"
+                        android:layout_toRightOf="@+id/person_photo"
+                        android:layout_alignParentTop="true"
+                        android:textSize="30sp"
+                        android:text="TEST"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/description"
+                        android:layout_toRightOf="@+id/person_photo"
+                        android:layout_below="@+id/name"
+                        android:text="TEST"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/pictures"
+                        android:layout_below="@+id/description"
+                        android:text="TEST"
+                        />
+                </LinearLayout>
+
             </LinearLayout>
 
         </RelativeLayout>
