--- a/app/src/main/res/layout/activity_image_staggered_layout.xml
+++ b/app/src/main/res/layout/activity_image_staggered_layout.xml
@@ -1,15 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/background_material_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.etsy.android.grid.StaggeredGridView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/gridView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="3"
-        android:stretchMode="columnWidth"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="72dp"
+            android:gravity="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+
+            android:layout_weight="0.1"
+            android:text="Touch image to see it in full resolution"
+            android:textColor="#FFFFFF"
+            android:id="@+id/notice" />
+
+        <com.etsy.android.grid.StaggeredGridView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/gridView"
+            android:layout_weight="0.8"
+            android:padding="4dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:numColumns="3"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_weight="0.1"
+            android:layout_height="72dp">
+
+        </LinearLayout>
+    </LinearLayout>
 </FrameLayout>
