--- a/app/src/main/res/layout/album_item_layout.xml
+++ b/app/src/main/res/layout/album_item_layout.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:cardview="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:padding="2dp">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:layout_width="fill_parent"
@@ -14,7 +13,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp"
+            android:paddingLeft="4dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
             >
 
             <LinearLayout
@@ -23,11 +24,10 @@
                 android:layout_height="wrap_content">
 
                 <com.etsy.android.grid.util.DynamicHeightImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:scaleType="centerCrop"
+                    android:layout_width="130dp"
+                    android:layout_height="200dp"
                     android:id="@+id/thumbnail"
-                    android:src="@drawable/thumb_leather_catsuit"
+                    android:background="@color/background_material_dark"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     />
