--- a/app/src/main/res/layout/fragment_categories_staggered_layout.xml
+++ b/app/src/main/res/layout/fragment_categories_staggered_layout.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/background_material_dark"
     android:layout_height="match_parent">
 
     <com.etsy.android.grid.StaggeredGridView
