--- a/app/src/main/res/layout/image_item_layout.xml
+++ b/app/src/main/res/layout/image_item_layout.xml
@@ -3,7 +3,8 @@
     android:id="@+id/panel_content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_weight="0.5"
+    android:background="@color/background_material_dark"
+    android:layout_weight="0.3"
     android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal" >
 
@@ -11,9 +12,10 @@
         android:id="@+id/small"
         android:src="@drawable/test"
         android:layout_width="fill_parent"
-        android:layout_height="180dip"
-        android:layout_weight="1.0"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.3"
+        android:padding="1dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitStart" />
+        android:scaleType="fitXY" />
 
 </FrameLayout>
