--- a/app/src/main/res/layout/activity_image_detail_layout.xml
+++ b/app/src/main/res/layout/activity_image_detail_layout.xml
@@ -5,13 +5,12 @@
     android:background="@color/background_material_dark"
     android:layout_height="match_parent">
 
-    <ImageView
+
+    <WebView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="0.9"
-        android:src="@drawable/test2"
-        android:scaleType="fitCenter"
-        android:id="@+id/image" />
+        android:id="@+id/webView" />
 
     <LinearLayout
         android:orientation="horizontal"
